--- a/index.html
+++ b/index.html
@@ -424,6 +424,16 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-form">
+          <p class="subscribe-title">Subscribe</p>
+          <form class="subscribe-form" action="">
+            <input class="subscribe-input" type="email" placeholder="Email" />
+            <button class="subscribe-button" type="submit">Subscribe
+              <svg class="subscribe-btn-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-subscribe"></use>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
