--- a/index.html
+++ b/index.html
@@ -426,11 +426,13 @@
         </div>
         <div class="subscribe-form">
           <p class="subscribe-title">Subscribe</p>
-          <form class="subscribe-form" action="">
+          <form class="subscribe-form">
             <input class="subscribe-input" type="email" placeholder="Email" />
-            <button class="subscribe-button" type="submit">Subscribe
+            <button class="subscribe-button" type="submit">
+              Subscribe
               <svg class="subscribe-btn-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-subscribe"></use>
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
             </button>
           </form>
         </div>
