--- a/index.html
+++ b/index.html
@@ -427,7 +427,15 @@
         <div class="subscribe-form">
           <p class="subscribe-title">Subscribe</p>
           <form class="subscribe-form">
-            <input class="subscribe-input" type="email" placeholder="Email" />
+            <label class="subscribe-label" for="subscribe">
+              <input
+                class="subscribe-input"
+                name="subscribe"
+                id="subscribe"
+                type="email"
+                placeholder="Email"
+              />
+            </label>
             <button class="subscribe-button" type="submit">
               Subscribe
               <svg class="subscribe-btn-icon" width="24" height="24">
