--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 name="subscribe"
                 id="subscribe"
                 type="email"
-                placeholder="Email"
+                placeholder="E-mail"
               />
             </label>
             <button class="subscribe-button" type="submit">
