--- a/portfolio.html
+++ b/portfolio.html
@@ -296,6 +296,26 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-form">
+          <p class="subscribe-title">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="subscribe-label" for="subscribe">
+              <input
+                class="subscribe-input"
+                name="subscribe"
+                id="subscribe"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-button" type="submit">
+              Subscribe
+              <svg class="subscribe-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
