--- a/index.html
+++ b/index.html
@@ -457,10 +457,17 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-from-cont">
-            <label class="modal-label-name" for="name">Name </label>
-            <div>
-              <input type="text" name="name" id="name" />
-              <svg></svg>
+            <label class="modal-label-name" for="user-name">Name </label>
+            <div class="user-name-container">
+              <input
+                class="user-name"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="user-name-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
             </div>
           </div>
         </form>
