--- a/index.html
+++ b/index.html
@@ -456,17 +456,35 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <div class="modal-from-cont">
-            <label class="modal-label-name" for="user-name">Name </label>
-            <div class="user-name-container">
+          <div class="modal-form-cont">
+            <label class="modal-label" for="user-name">Name </label>
+            <div class="input-container">
               <input
-                class="user-name"
+                class="input"
                 type="text"
                 name="user-name"
                 id="user-name"
               />
-              <svg class="user-name-icon" width="18" height="24">
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-cont">
+            <label class="modal-label" for="phone">Phone </label>
+            <div class="input-container">
+              <input class="input" type="text" name="phone" id="phone" />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-cont">
+            <label class="modal-label" for="email">Email</label>
+            <div class="input-container">
+              <input class="input" type="text" name="email" id="email" />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
