--- a/index.html
+++ b/index.html
@@ -488,6 +488,14 @@
               </svg>
             </div>
           </div>
+          <div class="tarea-cont">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-tarea"
+              name="user-comment"
+              id="user-comment"
+            ></textarea>
+          </div>
         </form>
       </div>
     </div>
