--- a/index.html
+++ b/index.html
@@ -496,6 +496,21 @@
               id="user-comment"
             ></textarea>
           </div>
+          <div class="checkbox-cont">
+            <input
+              class="checkbox visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
+            />
+            <label class="modal-label" for="user-privacy">
+              <span class="label-span"
+                ><svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-heckbox"></use></svg></span
+              >I accept the terms and conditions of the
+            </label>
+          </div>
         </form>
       </div>
     </div>
