--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
           </div>
           <div class="checkbox-cont">
             <input
-              class="checkbox visually-hidden"
+              class="checkbox"
               type="checkbox"
               id="user-privacy"
               name="user-privacy"
