--- a/index.html
+++ b/index.html
@@ -494,11 +494,12 @@
               class="modal-tarea"
               name="user-comment"
               id="user-comment"
+              placeholder="Text input"
             ></textarea>
           </div>
           <div class="checkbox-cont">
             <input
-              class="checkbox"
+              class="checkbox visually-hidden"
               type="checkbox"
               id="user-privacy"
               name="user-privacy"
@@ -509,6 +510,7 @@
                 ><svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-heckbox"></use></svg></span
               >I accept the terms and conditions of the
+              <a class="privacy-policy" href="">Privacy Policy</a>
             </label>
           </div>
         </form>
