--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
               <a class="privacy-policy" href="">Privacy Policy</a>
             </label>
           </div>
+          <button type="submit" class="submit">Send</button>
         </form>
       </div>
     </div>
