--- a/portfolio.html
+++ b/portfolio.html
@@ -296,7 +296,7 @@
             </li>
           </ul>
         </div>
-        <div class="subscribe-form">
+        <div class="subscribe-container">
           <p class="subscribe-title">Subscribe</p>
           <form class="subscribe-form">
             <label class="subscribe-label" for="subscribe">
