--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       <section class="customer">
         <div class="container">
           <h2 class="customer-title">Customers</h2>
-          <ul class="customer-list">
+          <ul class="customer-list list">
             <li class="customer-list-item">
               <a class="customer-link link" href=""
                 ><svg class="customer-icon" width="104" height="56">
@@ -464,6 +464,7 @@
                 type="text"
                 name="user-name"
                 id="user-name"
+                placeholder="Name"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
@@ -473,7 +474,13 @@
           <div class="modal-form-cont">
             <label class="modal-label" for="phone">Phone </label>
             <div class="input-container">
-              <input class="input" type="text" name="phone" id="phone" />
+              <input
+                class="input"
+                type="text"
+                name="phone"
+                id="phone"
+                placeholder="Phone"
+              />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
@@ -482,7 +489,13 @@
           <div class="modal-form-cont">
             <label class="modal-label" for="email">Email</label>
             <div class="input-container">
-              <input class="input" type="text" name="email" id="email" />
+              <input
+                class="input"
+                type="text"
+                name="email"
+                id="email"
+                placeholder="Email"
+              />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
